react-app: implement plugin system

--- a/react-app/public/plugins/sidebar/index.html
+++ b/react-app/public/plugins/sidebar/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>sidebar</title>
+    <script src="main.js"></script>
   </head>
   <body>
-    this is sidebar
+    sidebar
+    <div id="contents"></div>
   </body>
 </html>
